restructured articles into their own file in their respective folder

--- a/kapitel/anzeigenmarkt.tex
+++ b/kapitel/anzeigenmarkt.tex
@@ -1,54 +1,7 @@
 \chapter{Markt, Tauschen} \index{Markt} \index{Tauschen}
 
-\section{Anzeigenmarkt}
-\begin{itemize}
-	\item \href{http://kleinanzeigen.ebay.de/anzeigen/stadt/siegen/}{kleinanzeigen.ebay.de/anzeigen/stadt/siegen/}
-	\item \href{http://marktplatz.wirsiegen.de/}{http://marktplatz.wirsiegen.de} 
-	\item \href{http://www.unibrett.net/}{http://www.unibrett.net/}
-\end{itemize}
-
-\section{Siegerländer Tauschring}
-Das Prinzip: Jeder bietet Arbeiten / Leistungen nach seinen Fähigkeitten an und erhält dafür eine unentgeltliche Gegenleistung. Zum Beispiel: Bernd repariert Gabys Fahrrad, Gaby näht Ralf eine Jacke, Ralf backt für Jörg einen Kuchen, Jörg mäht für Bernd den Rasen und so weiter. Wenn Sie Interesse haben mitzumachen oder mehr wisssen wollen, melden Sie sich bitte.\\
-\\
-Treffen: Jeden 1. Sonntag im Monat um 19.30 Uhr\\
-Mehrgenerationenhaus / Bürgerhaus\\
-Obere Kaiserstr. 6\\
-57078 Siegen-Geisweid \\
-\\
-Siegrid Stracke\\
-Mobil: 01 72 - 99 20 59 62 \\
-Christiane Mahr\\
-Telefon: 02 71 - 23 17 40 2\\
-
-\section{Regalfloh}
-Regalfloh in der Fußgängerzone Kreuztal und Netphen.\\
-577223 Kreuztal\\
-Marburger Straße 13, direkt im Einkaufszentrum\\
-Telefon: 02 27 32 - 70 80 88 8 \\
-\\
-57250 Netphen\\
-Neumarkt 32, direkt im Einkaufszentrum\\
-Telefon: 02 73 8 - 37 70 11 0 \\
-\\
-57271 Hilchenbach , Am Preisterbach 1-15. direkt im Einkaufszentrum Gerberpark\\
-Telefon: 02 27 33 - 55 80  645\\
-Internet: \href{http://regalfloh.de/}{http://regalfloh.de/}   
-
-\section{Geidweider Flohmärkte}
-Ein sehr schöner Flohmarkt ohne Neuware. Alle Plätze überdacht! 6.00 bis 13.00 Uhr. Termine 2015:\\
-\begin{enumerate}
-	\item 07. März
-	\item 04. April
-	\item 02. Mai
-	\item 06. Juni
-	\item 04. Juli 
-	\item 01. August
-	\item 05. September
-	\item 10. Oktober
-	\item 07. November
-\end{enumerate}
-
-\paragraph{}57078 Siegen-Geisweid\\
-Unter der Hüttentalstraße,\\
-Internet: \href{http://www.geisweider-flohmarkt.de}{www.geisweider-flohmarkt.de}
+\input{kapitel/anzeigenmarkt/anzeigenmarkt.tex}
+\input{kapitel/anzeigenmarkt/siegerl_nder_tauschring.tex}
+\input{kapitel/anzeigenmarkt/regalfloh.tex}
+\input{kapitel/anzeigenmarkt/geisweider_flohm_rkte.tex}
  
