--- a/kapitel/begegnung.tex
+++ b/kapitel/begegnung.tex
@@ -1,87 +1,8 @@
 \chapter{Begegnung}
 
-\section{GEGEN-ÜBER Begegnungs- und Beratungsstelle}\index{Gegen-über}
-Das ist die Begegnungs- und Beratungsstelle der Diakonie. Als Anlaufstelle für jedermann bietet sie die Möglichkeit, sich zu begegnen, alleine oder mit anderen etwas zu unternehmen oder einfach nur mal unter Menschen zu sein. Was bieten sie an?
-
-\begin{itemize}
-	\item Begegnung
-	\item Beratung
-	\item Kaffee und Snacks
-	\item Kostenfreie Freizeitangebote: Kicker \& Billard
-	\item PC und Internet
-	\item Zeitung lesen
-	\item Musik hören
-	\item gemeinsam kochen und backen
-	\item kreatives Gestalten
-	\item Musik selber machen
-	\item Gesprächsgruppen
-	\item Bewegung
-	\item Sport
-\end{itemize}
-
-Die Begegnungsstätte ist dienstags von 15 bis 18 Uhr geöffnet. Nach Absprache und aktuellem Programm kommen weitere Öffnungszeiten hinzu.\\
-\\
-Die Beratungsstelle ist montags, mittwochs und freitags von 14 bis 17 Uhr und nach Vereinbarung geöffnet.\\
-\\
-Sozialdienste \\
-Friedrichstraße 18\\
-57072 Siegen\\
-Telefon: 02 71 - 50 03 0 \\
-
-\section{Stolperstein Verein für praktizierte Gastfreundschaft e.V.}\index{Stolperstein}\index{Gastfreundschaft}
-Stand: 2014-12-28: Keiner soll ausgegrenzt werden, weil er kein Geld hat, eine Behinderung erlebt oder meint, man mag ihn nicht. Sie werden beu uns nicht bgedrängt. Sie dürfen auch einfach \enquote{da sein}. Sie gehen keine Verpflichtung ein. Es gibt keinen Eintrittspreis oder Verzehrzwang. Sie können anonym bleiben, aber Sie müssen es nicht. Wir meinen, Einsamkeit nimmt in unserer Zeit zu. Dem wollen wir etwas engegensetzen. Wir tun dies ehrenamtlich.\\
-Gastlichkeit bei Kaffee und anderen alkoholfreien Getrönken, ab und zu mir Snack. Billad. Darts und andere Spiele, nie um Geld und nicht mit Automaten.\\
-Öffnungszeiten: Freitags von 17:00 bis 21:00 Uhr Sa, von  17:00 bis 21:00 Uhr So. von 15:00 bis 19:00 Uhr. Getränke ab 40 Cent. Frühstück: Donnerstag von 09:00 bis 12:00 Uhr 2,- \euro \\
-\\
-Freudenberger Straße 16\\
-57072 Siegen\\
-Telefon: 02 71/2 38 19 19\\
-E-Mail: \href{mailto:info@stolperstein-siegen.de}{info@stolperstein-siegen.de}
-Internet: \href{http://www.stolperstein-siegen.de}{http://www.stolperstein-siegen.de} 
-
-\section{Café Patchwork}
-Öffnungszeiten:  Beratungsstelle, Mo - Fr 9:00 - 12:00 Uhr.\\
-\\
-Café Patchwork \\
-Beratungsstelle für Menschen in Not\\
-In der Herrenwiese 5\\
-57076 Siegen\\
-Telefon: 02 71 - 48 96 33
-
-\section{Tagesaufenthalt Café Patchwork}
-Täglich 10:00 bis 16:00 Uhr. Angebote: Beratung, Mittagstisch Küchenbenutzung, Duschen, Waschstation, Freizeitangebote, Fernsehraum 
-Tagesaufenthalt Café Patchwork\\
-\\
-Café Patchwork \\
-Beratungsstelle für Menschen in Not\\
-In der Herrenwiese 5\\
-57076 Siegen\\
-Telefon: 02 71 - 48 96 35 5
-
-\section{Folkclub Siegen} \index{Tanzen}
-Öffentliche Tanzveranstaltung mit Live-Musik. Eintritt Frei! Abendfüllendes Programm mit traditioneller Musik und Tänze zum Mitmachen. 14 tägig Dienstags 19:30 Uhr. In der Johanna-Ruß-Schule, Numbach. Ehemalige Belgier Kasino. Von Juni bis August finden die Treffen im Schlosspark, Siegen statt. \\
-\\
-Rolf Plessner\\
-57072 Siegen\\
-Telefon: 02 71 - 20 52 1 
-
-\section{Nebenan, Ambulantes Zentrum und Café }
-Unverbindliches Beratungs- und Kontaktangebot für Menschen mit persönlichen und sozialen Problemen und deren Angehörige. Alltags- und lebenspraktische Hilfe (kochen u.a.) Gemeinsame Freizeitaktivitäten (Spiele, wii-sports, Puzzeln), Sport, Bewegung, Entspannung, Tanzen.\\
-\\
-Frankfurter Straße 18\\
-57074 Siegen
-
-\section{Das Mütterzentrum Siegen}
-Das Mütterzentrum ist ein Treffpunkt für Mütter und Väter mit Kindern, die einander kennen lernen, Erfahrungen austauschen, sich gegenseitig entlasten oder \enquote{einfach nur mal auftanken} wollen. Selbstvertrauen und die Lust an neuen Freundschaften, Aktivitäten können dort wachsen. Das soziale Miteinander im Mütterzentrum ermöglicht den Abbau von Grenzen zwischen Berufs- und  Familienarbeit, Privatheit und Öffentlichkeit für Jung und Alt.\\
-\\
-Mütterzentrum Siegen e.~V.\\
-Ziegelwerkstr. 54\\
-57074 Siegen\\
-Telefon: 02 71 - 22 04 49\\
-E-Mail: \href{info@muetterzentrum-siegen.de}{info@muetterzentrum-siegen.de} \\
-Internet: \href{http://www.muetterzentrum-siegen.de/}{www.muetterzentrum-siegen.de/}\\
-\\
-Bürozeiten: \\
-Moontag: 10 - 12 Uhr\\
-Dienstag: 10 - 12 Uhr\\
-In den Ferien ist unsere Büro leider nicht besetzt
+\input{kapitel/begegnung/gegen__ber.tex}
+\input{kapitel/begegnung/stolpersteine.tex}
+\input{kapitel/begegnung/caf__patchwork.tex}
+\input{kapitel/begegnung/folkclub.tex}
+\input{kapitel/begegnung/nebenan_ambulantes_zentrum.tex}
+\input{kapitel/begegnung/das_m_tterzentrum_siegen.tex}
