--- a/kapitel/beratung.tex
+++ b/kapitel/beratung.tex
@@ -1,67 +1,7 @@
 \chapter{Beratung} \index{Beratung}
 
-\section{Caritas}
-Allgemeine Sozialberatung - Offen für alle. Zu den Aufgaben der Allgemeinen Sozialberatung gehört es, hilfesuchenden Menschen, die sich nicht im weitverzweigten sozialen Netz zurechtfinden, über Hilfsmöglichkeiten zu informieren.  Durch Beratung sollen - unter Berücksichtigung der jeweiligen individuellen Situation der Hilfesuchenden - neue Wege bzw. Alternativen aufgezeigt werden. Wir leisten Beratung und Unterstützung bei Notlagen und auch im Umgang mit Behörden. Viele Menschen wissen nicht, welche Möglichkeiten es für sie im sozialen Netz gibt.\\
-\\
-Dieter Sommer \\
-Telefon. 02 71 - 23 60 2 - 35\\ 
-Tanja Kraus \\
-Telefon: 02 71 - 23 60 2 - 19 \\
-Bianca Braun \\
-Telefon: 02 71 - 23 60 2 - 49\\  
-Häutebachweg 5\\
-57072 Siegen 
-
-\section{Ämterbegleitung}\index{Ämterbegleitung}
-Hab ihr Probleme oder seit ihr unsicher alleine zum Amt (insbesondere Job-Center) zu gehen?  Wir begleiten euch kostenlos und helfen auch beim ausfüllen der Anträge. Anrufen oder mailen:\\
-\\
-Siegener Erwerbslosen Initiative  SEI \\
-Siggi Goldau \\
-Telefon: 0152 - 25410587 \\
-\\
-Klaus Reifenrath 
-Telefon: 01 71 - 88 21 42 0\\
-E-Mail: \href{mailto:Klaus@krwe.de}{Klaus@krwe.de}\\
-\\
-Paritätische Kreisgruppe Siegen Wittgenstein\\ 
-Peter Schmitt\\
-Sandstr. 12\\
-57072 Siegen\\
-Telefon: 02 71 - 54 96 6
-
-\section{Diakonie Sozialdienste GmbH, Beratungsdienste}\index{Beratungsdiensts}
-Kostenlose Arbeitslosenberatung.\\
-\\
-Diakonie Sozialdienste GmbH\\
-Diakonie  Beratungsstelle für Erwerbslose\\
-Frau Eva Sondermann \\
-Friedrichstraße 27\\
-57072 Siegen \\
-Telefon: 02 71 - 50 03 0 
-
-\section{Kinderschutzbund Siegen}
-Der Kreisverband Siegen-Wittgenstein e.~V. im Deutschen Kinderschutzbund ist ein politisch und konfessionell unabhängiger, gemeinnütziger Verein und anerkannter Träger der freien Jugendhilfe. Wenden Sie sich an uns, wenn es zu Hause Probleme 
-gibt, wenn in der Schule Probleme auftreten wenn Sie glauben, Kinder in Ihrer Umgebung seien gefährdet oder vernachlässigt, wenn Sie Fragen zur Entwicklung von Kindern haben, wenn Sie Förderangebote für Kinder und Eltern kennenlernen wollen. In Fragen von Kinderrechten und Kinderschutz. Rufen Sie uns an und machen Sie einen Termin oder kommen Sie gleich in unsere Offene Sprechstunde: \\
-Mo - Do zwischen 9.00 und 12.00 Uhr (ausgenommen Ferien NRW). \\
-Offene Sprechstunde: Donnerstags von 10.00 - 11.00 Uhr  \\
-\\ 
-Koblenzer Strasse 109,  (Nähe Siegerlandhalle)\\ 
-57072 Siegen\\
-Telefon: 02 71 - 33 00 50 6\\
-E-Mail: \href{mailto:gs@kinderschutzbund-siegen.de}{gs@kinderschutzbund-siegen.de} 
-
-\section{Bürgerservice Brückenbauer}
-"Brückenbauer" helfen im Alltagsdschungel: Wer kennt das nicht: Ein Konflikt mit dem Sozialamt, missverständliches Behördendeutsch oder man weiß nicht, wohin man sich mit seiner Frage wenden muss ... Stehen Sie auch vor diesem gleichen Problem? Vielleicht können Ihnen die "Brückenbauer" der AWO helfen, den richtigen Ansprechpartner zu finden oder im Konfliktfall vermitteln. Die Brückenbauer stehen als neutrale Ansprechpartner zur Verfügung und haben ein offenes Ohr für Ihre Fragen und Probleme:  bei 
-Arbeitslosigkeit, mit Behörden, bei Trennungs- und Familienfragen, rund um das Thema Sozialleistungen (z.B. Grundsicherung, 
-Wohngeld, Kindergeld, Elterngeld, Pflegeversicherung, Schwerbehindertenausweis, Unterhaltsvorschuss), z.B. an der Arbeitsstelle oder mit Vermietern, bei finanziellen Schwierigkeiten/Schulden. Die "Brückenbauer" unterstützen Sie auch dabei: festzustellen, welche Leistungen Sie beantragen können, Antragsformulare zu verstehen - und helfen gerne beim Ausfüllen, eine Kündigung zu schreiben, usw. \\
-Öffnungszeiten: dienstags von 9.00 - 12.00 Uhr \\
-Dienstleistungen: Beratung, Sonstige Dienstleistungen. Zielgruppen: Arbeitslose, Familien, Jugendliche und junge Erwachsene\\ Ehrenamtliche, Männer, Senioren, Menschen mit Migrationshintergrund, Ehrenamtliche, Frauen, Ratsuchende, Menschen mit Behinderung\\ 
-\\
-Bürgerservice Brückenbauer \\
-Peter Bahnschulte \\
-Koblenzer Str. 136\\
-57072 Siegen \\
-Telefon: 02 71 - 33 86 - 14 4 \\
-Fax: 02 71 - 33 86 - 19 9 \\ 
-E-Mail: \href{mailto:brueckenbauer@awo-siegen.de}{brueckenbauer@awo-siegen.de}
-Internet: \href{www.awo-siegen.de}{www.awo-siegen.de}  
+\input{kapitel/beratung/caritas.tex}
+\input{kapitel/beratung/aemterbegleitung.tex}
+\input{kapitel/beratung/diakonie_sozialdienst.tex}
+\input{kapitel/beratung/kinderschutzbund.tex}
+\input{kapitel/beratung/burgerservice_br_ckenbauer.tex}
