--- a/kapitel/fortbewegung.tex
+++ b/kapitel/fortbewegung.tex
@@ -1,37 +1,4 @@
 \chapter{Fortbewegung}
 
-\section{MobilitätsCard}\index{MobilitätsCard}\index{Sozialticket}
-
-Das Sozialticket der Verkehrsgemeinschaft Westfalen-Süd (VGWS) heißt MobilitätsCard. \\
-\\
-Die MobilitätsCard kann unbürokratisch beim ZWS beantragt werden. Hierzu ist ein Faltblatt erstellt worden, das in übersichtlicher Form die grundlegenden Informationen zur Antragsstellung sowie den Antragsvordruck enthält. Dieses Faltblatt ist bei den Kreisen Olpe und Siegen-Wittgenstein, den Bürgerbüros bzw. Sozialämtern der Städte und Gemeinden, den Jobcentern und weiteren Sozialstationen erhältlich.\\
-\\
-Die MobilitätsCard richtet sich an Bezieher von Arbeitslosengeld II oder Sozialgeld nach dem Sozialgesetzbuch II der Jobcenter Olpe/Siegen-Wittgenstein, an Bezieher von Hilfe zum Lebens-unterhalt oder Grundsicherung im Alter sowie bei voller Erwerbsminderung nach dem Sozialgesetz-buch XII von den Sozialämtern der Städte und Gemeinden im Kreis Olpe/Siegen-Wittgenstein. Darüber hinaus an Bezieher von Hilfe zum Lebensunterhalt nach dem Bundesver\-sorgungsgesetz und Bezieher von Leistungen nach dem Asylbewerberleistungsgesetz von den Städten und Gemeinden im Kreis Olpe/Siegen-Wittgenstein.\\
-\\
-Die MobilitätsCard bietet einen ganzen Monat Mobilität im gesamten Binnennetz der Verkehrs-gemeinschaft Westfalen-Süd (VGWS) in Bus und Bahn (2. Klasse) im gesamten Kreisgebiet Olpe sowie Siegen-Wittgenstein. Eine zeitliche Einschränkung innerhalb des Gültigkeitsmonats gibt es nicht.\\
-\\
-Sie enthält jeweils montags bis freitags ab 19.00 Uhr bis zum Betriebsende (Schienenverkehr bis 3.00 Uhr bzw. auf den Nachtbuslinien bis 5.00 Uhr des Folgetages) eine sogenannte Mitnahmeregelung, wonach ohne weitere Kosten bis zu 4 weitere Fahrgäste oder alternativ Fahrräder mitgenommen werden können. Diese Regelung gilt auch samstags, sonntags und an Feiertagen sowie am 24. und 31.12. ohne zeitliche Einschränkung.\\
-\\
-Dieses Angebot kostet den Berechtigten einen monatliche 29,90 \euro.\\
-\\
-Ihre Ansprechpartner bei Rückfragen:\\
-\\
-Beate Stirnberg\\
-Telefon: 0271 333-2435\\
-Telefax: 0271 333-2430\\
-E-Mail: b.stirnberg@zws-online.de\\
-Internet: www.zws-online.de\\
-\\
-Thomas Wagner\\
-Telefon: 0271 333-2438\\
-Telefax: 0271 333-2430\\
-E-Mail: wagner@zws-online.de\\
-Internet: www.zws-online.de\\
-\\
-ZWS\\
-Zweckverband Personennahverkehr Westfalen-Süd\\
-Koblenzer Straße 73\\
-57072 Siegen
-
-\section{Günstig von Ort zu Ort}
-Internet:\href{http://www.mitfahrgelegenheit.de}{http://www.mitfahrgelegenheit.de}. Tipp: z.B. Siegen - Köln 7,- \euro
+\input{kapitel/fortbewegung/mobilit_tscard.tex}
+\input{kapitel/fortbewegung/mitfahrgelegenheit.tex}
