--- a/kapitel/hausstand.tex
+++ b/kapitel/hausstand.tex
@@ -1,73 +1,6 @@
 \chapter{Hausstand} \index{Hausstand}
 
-\section{Caritas Möbelbörse}
-Vermittlung von Möbeln und Haushaltsgeräten. Kostenlos abzugebende, gut erhaltene Möbel und funktionierende Haushaltsgeräte werden an Interessenten telefonisch vermittelt. Es erfolgen keine Lagerung und kein Transport durch den Caritasverband.\\
-\\
-Ulrike Domian \\
-Telefon: 0271/ 236 02 - 10\\
-Fax: 0271/ 236 02 - 39 \\
-Häutebachweg 5\\
-57072 Siegen \\
-\\
-So funktioniert die Möbelbörse\\
-\begin{enumerate}
-	\item Wer gebrauchsfähige, gut erhaltene Möbel oder Haushaltsgeräte verschenken möchte, teilt dies der Möbelbörse mit (telefonisch oder über eMail).  
-	\item Das Angebot wird in eine Liste aufgenommen.
-	\item Interessenten rufen entweder bei der Möbelbörse an und erhalten die Telefonnummer der Anbieter mit passenden Angeboten.  
-	\item Die Interessenten setzen sich mit den Anbietern telefonisch in Verbindung und holen dort Möbel und Geräte ab.  
-	\item Die Anbieter teilen dem Caritasverband mit, dass die Vermittlung erfolgreich war.
-\end{enumerate}  
+\input{kapitel/hausstand/caritas_m_belb_rse.tex}
+\input{kapitel/hausstand/alibaba_alternative_lebensr_ume_gmbh.tex}
+\input{kapitel/hausstand/ralf_s_fundgrube.tex}
 
-\section{AliBaba - Alternative Lebensräume GmbH}
-Kindersachen \& Spielzeug für kleines Geld.\\
-Internet:\href{http://www.alf-siegen.de/alibaba.html}{http://www.alf-siegen.de/alibaba.html}
-\\
-Siegen - Oberstadt\\
-Marburger Tor 8\\
-Telefon: 02 71 - 30 38 04 8\\
-Öffnungszeiten:\\
-Mo - Fr: 9:00 bis 18 8:00 Uhr \\
-Sa: 9:00 bis 14:00 Uhr\\ 
-\\
-Siegen - Kaan-Maarienborn\\
-Hauptstraße 34\\
-Telfon: 02 71 - 25 06 62 7\\ 
-Öffnungszeiten:\\
-Mo - Fr: 9:00 bis s 18:00 Uhr\\ 
-Sa: 9:00 bis 14:00 Uhr\\
-\\
-Kreuztal \\ 
-Siegener Straße 12\\  
-Telefon: 02 73 32 - 55 80 54 2\\ 
-Öffnungszeiten:\\
-Mo - Fr: 9:00 bis 18:00 Uhr\\
-Sa: 9:00 bis 13:00\\
-\\
-Hilchenbach\\
-In der Herrenwiese 19 
-Telefon: 02 73 33 - 81 12 43\\ 
-Öffnungszeiten:\\
-Mo - Fr: 9:00 bis s 18:00 Uhr\\
-Sa: 9:00 bis 13:00 Uhr\\
-\\
-Wahlbach\\
-Gilsbacher Straße 1\\  
-Telefon: 02 73 36 - 44 92 72 7 \\
-Öffnungszeiten: \\
-Mo - Fr: 8:30 bis 18:00 Uhr \\
-Sa 8:30 bis 13:00  Uhr \\
-
-\section{Ralf's Fundgrube}
-Inhaber Ralf Traum.\\
-Weidenauer Str. 228-234\\
-57074 Siegen-Weidenau\\
-Telefon: 02 71 - 66 10 81 6\\
-Telefax: 02 71 - 68 19 98 2\\
-\\
-Öffnungszeiten:\\
-montags bis freitags:\\
-10:00 bis 18:00 Uhr\\
-donnerstags:\\
-10:00 bis 19:00 Uhr\\
-samstags:\\
-10:00 bis 14:00 Uhr
