--- a/kapitel/jugend.tex
+++ b/kapitel/jugend.tex
@@ -1,61 +1,4 @@
 \chapter{Jugend}
 
-\section{Internationaler Bund - Schulsozialarbeit, Kinder- und Jugendtreff Siegen}
-Der Kinder- und Jugendtreff K 52 bietet Schulsozialarbeit nach dem \enquote{Siegener Modell} sowie offene Kinder- und Jugendarbeit an. Auftraggeber ist die Stadt Siegen und das Angebot erfolgt in enger Kooperation mit der Stadt und den Schulen im Stadtteil. Die Einrichtung besteht seit November 2002.\\
-\\
-Schulsozialarbeit Siegen Kinder- und Jugendtreff\\
-Frank Halberstadt\\
-Heidenbergstr. 1c\\
-57072 Siegen\\
-Telefon: 02 29 5 - 24 28\\
-E-Mail: \href{Frank.Halberstadt@internationaler-bund.de}{Frank.Halberstadt@internationaler-bund.de}\\
-\\
-Wesentliche Bestandteile der Angebote sind:
-\begin{itemize}
-	\item Arbeit mit Kindern: Die Kinder erfahren in ihrer sozialen, emotionalen und schulischen Entwicklung ganzheitliche Unterstützung.
-	\item Arbeit mit Familien: In regelmäßig stattfindenden Elterngesprächen und Hausbesuchen wird unter Berücksichtigung der individuellen Möglichkeiten jeder Familie die Erziehungskompetenz der Eltern gestärkt.
-	\item Kooperation mit der Schule: Wöchentlicher Austausch mit den Lehrern, Besuche im Unterricht und weitere gemeinsame Maßnahmen. ermöglichen, zwischen Schule und Elternhaus zu vermitteln und gemeinsam eine individuelle Förderplanung für die Kinder zu entwickeln.
-	\item Zusammenarbeit mit anderen Einrichtungen: Die Einrichtung arbeitet zum Wohle des Kindes mit zahlreichen anderen am Heidenberg tätigen Einrichtungen und Fachdiensten zusammen.
-	\item Angebote für Grundschüler
-	\begin{itemize}
-		\item Hausaufgabenbetreuung
-		\item Einzelförderung
-		\item Pädagogisch betreutes Spielzimmer
-	\end{itemize}
-	\item Offene Arbeit
-	\begin{itemize}
-		\item Kreativangebote
-		\item Koch- und Backangebote
-		\item Sport- / Schwimmangebote
-		\item Medien AG: Projektarbeit (Theater etc.)
-	\end{itemize}
-\end{itemize}
-
-\section{Jugendmigrationsdienst Siegen}
-Der Jugendmigrationsdienst (JMD) bietet allen jungen Menschen mit Migrationhintergrund unterschiedliche Angebote an. Ziele sind \\
-\begin{enumerate}
-	\item die Verbesserung von Chancengleichheit und Partizipation junger Migranten und Migrantinnen in allen Bereichen des sozialen, kulturellen und politischen Lebens
-	\item die Verbesserung der sprachlichen, beruflichen und sozialen Integration. Dieses Ziel wird zum einen durch eine individuelle Beratung und Begleitung im Wege des Casemanagements und zum anderen durch die Vermittlung von lebensweltnahen Gruppenangeboten realisiert
-	\item die Initiierung und Begleitung der interkulturellen Öffnung von Fach- und Regeldiensten
-	Grundlage der JMD- Arbeit bildet das Programm 18 des Kinder- und Jugendplanes des Bundes (KJP) \enquote{Integration junger Menschen mit Migrationshintergrund}.
-\end{enumerate}
-
-\paragraph{} Die Arbeit der JMDe berücksichtigt die Grundsätze des Gender Mainstreaming (vgl. RL-KJP Nr. I2. c). Die Finanzierung erfolgt über das Bundesministerium für Frauen, Senioren, Familie und Jugend (BMFSFJ). Zielgruppe:\\
-
-\begin{enumerate}
-	\item (neu- ) zugewanderte Jugendliche und junge Erwachsene im nicht mehr vollzeitschulpflichtigen Alter bis zur Vollendung des 27. Lebensjahres während und nach den Integrationskursen (§§ 44, 44a des Aufenthalsgesetzes)
-	\item Kinder, Jugendliche und junge Erwachsene von zwölf bis zur Vollendung des 27. Lebensjahres mit Migrationshintergrund und Daueraufenthaltsperspektive, zeitnah nach der Einwanderung
-	\item Institutionen und ehrenamtliche Initiativen in den sozialen Netzwerken, die für Migranten und Migrantinnen relevant sind (Integrationskursträger, Schulen, Fach- und Regeldienste, Betriebe, Verbände, Kultur- und Bildungseinrichtungen, Migrantenselbstorganisationene, Religionsgemeinschaften etc.) 
-\end{enumerate}
-\paragraph{}
-Gregor Kulawik\\
-Telefon: 02 71 - 48 53 52 3\\
-Fax: 02 71 - 48 53 52 4\\
-E-Mail: \href{mailto:Gregor.Kulawik@internationaler-bund.de}{Gregor.Kulawik@internationaler-bund.de}\\
-\\
-Jugendmigrationsdienst Siegen\\
-Rathausstr. 3\\
-57078 Siegen \\
-Telefon: 02 71 - 48 53 52 3
-Fax: 02 71 - 48 53 52 4
-E-Mail: \href{mailto:JMD-Siegen@internationaler-bund.de}{JMD-Siegen@internationaler-bund.de}
+\input{kapitel/jugend/internationaler_bund_schulsozialarbeit_kinder_und_jugendtreff_siegen.tex}
+\input{kapitel/jugend/jugendmigrationsdienst_siegen.tex}
