--- a/kapitel/kultur.tex
+++ b/kapitel/kultur.tex
@@ -1,39 +1,3 @@
 \chapter{Kultur}\index{Kultur}
 
-\section{Siegener Ausweis} 
-Wo gibt es welche Vergünstigungen für Inhaber des Siegener Ausweises?
-\begin{enumerate}
-	\item Der Besuch in Städtischen Museum ist kostenlos.
-	\item in den Hallen- und Warmwasserfreibädern der Stadt Siegen 50\%  Preisnachlass 
-	\item In der Stadtbibliothek Siegen, kostenlos Bücher, Filme oder Musik - CDs ausleihen 
-	\item Volkshochschule Siegen 50\% Preisnachlass  
-\end{enumerate}
-
-\paragraph{}
-\begin{itemize}
-	\item Wer kann einen Siegener Ausweis beantragen? Personen, die in Siegen ihren Hauptwohnsitz haben und die wirtschaftlichen Voraussetzungen erfüllen, das heißt über ein geringes Einkommen verfügen. 
-	\item Wo gibt es welche Vergünstigungen für Inhaber des Siegener Ausweises? 
-	\begin{itemize}
-		\item Kulturelle Veranstaltungen/Apollo-Theater. Für eigene Veranstaltungen der Stadt Siegen (Apollo-Theater, kulturelle Aufführungen, Konzerte, Unterhalungsprogramme) wird Ermäßigung auf alle Eintrittspreise gewährt.
-		\item Hallen- und Warmwasserfreibäder der Stadt Siegen. Gemäß dem bestehenden Tarifsystem wird für die Hallen- und Warmwaasserfreibadbenutzung ein 50\%iger Preisnachlass gewährt. Kinder und Jugendliche bis einschließlich 17 Jahre bezahlen einen Mindesteintritt. 
-		\item Museen: Der Besuch der städtischen Museen (Siegerlandmuseum und Haus Oranienstraße) ist kostenlos. Im Museum für Gege enwartskuns zahlen Inhaber des Siegener Ausweises einen ermäßigten Preis.
-		\item Musikschule der Stadt Siegen Für die Grupenunterrichte im Elementarbereich, das heißt für die Kurse musikalische Früherziehung und musikalische Grundausbildung, wird auf die nach der Entgeltordnung der Musikschule zu zahlenden Gebühren ein Preisnachlass von 50\% gewährt (z.~B. Musikzwerge). 
-		\item Siegener Tafel: Der Siegener Ausweis berechtigt in Verbindung mit dem Hartz IV-Bescheid oder Rentenbescheid zum Einkauf bei der Siegener Tafel, Hammerwerk 1, 570 076 Siegen. 
-		\item Stadtbibliothek Siegen: In der Stadtbibliothek Siegen können kostenlos  Medien ausgeliehen werden, es gibt allerdings keine Befreiung von Säumnis- und Mahngebühren sowie von Gebühren für besondere Serviceleistungen. 
-		\item Ferienspaß: Bei einigen Angeboten sowie Ferienfreizeiten sind Ermäßigungen für Kinder und Jugendliche mit Siegener 
-		Ausweismöglich. 
-		\item Veranstaltungen Siegener Senioren/Jugenddhilfe: Für Veranstaltungen wird Seniorinnen und Senioren Befreiung von den  Eintrittspreisen erteilt, soweit die Stadt Siegen Veranstalter ist. Dies gilt ebenso für Veranstaltungen der Jugendhilfe. 
-		\item Volkshochschule der Stadt Siegen: Veranstaltungen (ausgenommen Studienfahrten und Materialkosten) können mit einem 50 \%igen Preisnachlass in Anspruch genommen werden.
-	\end{itemize}
-	\item Wohnberechtigungsschein Inhaber des Siegener Ausweises zahlen keine Gebühren für den Wohnberechtigungsschein.
-	\item Informationen zum Siegener Ausweis
-	\begin{itemize}
-		\item Wer stellt den Siegener Ausweis aus? Wer ist für eine Verlängerung zuständig?	Der Siegener Ausweis wird von der 
-		Stadt Siegen, Fachbereich 5, Soziales: Familien, Jugend, Wohnen. Rathaus Weidenau, Weidenauer Straße 211-213,  57076 Siege en ausgestellt oder gegebene enfalls verläng gert.  
-		\item Personen, die Arbeits slosengeld II (ALG II) beziehen und sonstige anspruchsberechtigte Personen mit geringem Einkomm
-		men: Abteilung 5/2, Förderung von jungen Menschen, Rathaus Weidenau, Weidenauer Straße 211-213, 57076 Siegen. Frau Baier, Zimmer 216, Telefon: (0271) 404-22230, Telefax: (0271) 404-22205, E-Mail: info@siegen.de. Die zur Beantragung notwendige Unterlagen sollten vorher telefonisch erfragt werden. Sprechzeiten: Montag bis F Freitag 08.30 bis 12. 00 Uhr, Personen  die Grunds sicherung beziehen,  Abteilung 5/1, Soziale Leistung, Rathaus Weidenau, Weidenauer Straße 211-213, 57076 Siegen  
-		entsprechend den Zuständigkeiten der Grundsicherungssachbearbeitung. Sprechzeiten: Montag bis Freitag, 08.30 bis 12. 00 Uhr 
-		\item Asylbewerber und Flüchtlinge. Abteilung 5/1, Soziale Leistungen, Rathaus Weidenau, Weidenauer Straße 211-213,	57076 Siegen, entsprechenden Zuständigkeiten nach dem Asylbewerberleistungsgesetz. Sprechzeiten: Montag bis Freitag, 08.30 bis 12. 00 Uhr.
-	\end{itemize}
-	\item Hilfen Informationen über weitere Hilfen - unabhängig vom Siegener Ausweis - erhalten Sie im Internet: \href{http://www.familie-siegen.de}{http://www.familie-siegen.de}
-\end{itemize}
+\input{kapitel/kultur/siegener_ausweis.tex}
