--- a/kapitel/nahrung.tex
+++ b/kapitel/nahrung.tex
@@ -1,155 +1,18 @@
 \chapter{Nahrung} \index{Nahrung} \index{Ernährung} \index{Essen}
 
-\section{Siegener Tafel e.~V.} \index{Nahrung} \index{Ernährung} \index{Essen}
-Stand: 2014-12-29\\
-Unsere Hauptausgabestelle der Lebensmittel befindet sich in Siegen, in der Bismarckstraße 90. Ausgabetage sind dienstags und donnerstags ab 13.30 Uhr. Die Bedürftigkeit muss schriftlich nachgewiesen werden:\\
-\\
-Sozialhilfeempfänger\\
-Hartz IV Empfänger\\
-Jugendliche mit geringem Einkommen\\
-Senioren mit geringer Rente\\
-Bezieher von Erwerbsunfähigkeitsrente\\
-Geringverdienende\\
-Ehemalige Selbständige ohne Einkommen und andere Bedürftige\\
-Studenten\\
-\\
-Siegener Tafel e.~V.\\
-Bismarckstraße 90\\
-57072 Siegen\\
-Telefon: 0271/2384520\\
-Mobil: 0172/7371546\\
-E-Mail: \href{mailto:info@siegener-tafel.de}{info@siegener-tafel.de}\\
-Internet: \href{http://siegener-tafel.de}{http://siegener-tafel.de}\\
-\\
-13 Außenstellen in Siegen und den Randgebieten kommen noch hinzu. Hier kommen unsere Lebensmittel 1x wöchentlich zur Verteilung. 
-\begin{enumerate}
-	\item Hilchenbacher Tisch
-	\item Freudenberger Tisch
-	\item Fischbacherberg Tisch
-	\item Netpher Tisch
-	\item Verein für Christliche Gemeinschaftspflege
-	\item Alf Kaan Marienborn
-	\item Alf Kreuztal
-	\item Frauenhaus Siegen
-	\item Pestalozzischule
-	\item Kita Rast Am Sender
-	\item Ev. Frauenhilfe West.ev (Tafel deck dich)
-	\item Neunkirchener Tafel
-	\item Betzdorfer Tafel 
-\end{enumerate}
-
-\section{Brot \& Dosen Lebensmittelausgabe }
-Nachweis über Hilfebezug ist notwendig! Info: Brot und Dosen sammelt gespendete Lebensmittel und gibt sie kostenlos weiter. Öffnungszeiten: Montags: 9:00 – 11:00 und 13:00 – 15:00 Uhr\\
-\\
-Brot \& Dosen Lebensmittelausgabe \\
-Alte Eisenstraße 6., hinterer Eingang\\
-57080 Siegen
-
-\section{Evangelisch-Freikirchlichen Gemeinde}
-Evangelisch-Freikirchlichen Gemeinde. Mittwochs ab 9:30 Uhr Kostenloses Frühstück \\
-Engsbachstraße 61\\
-57076 Siegen-Weidenau\\
-Telefon: 02 71 - 73 85 9
-
-\section{Aufge(sc)hobener Kaffee}\index{Kaffee}
-
-Basierend entstehend auf einer Italienischen Tradition entsteht das Prinzip von, „Suspended Coffee“.  Ein vorher bezahlter Kaffee wird aufgeschoben für eine Person, die Ihn sich selbst nicht leisten kann. Es ist ein simples Prinzip der Nächstenliebe: Trinkt man in einem der teilnehmenden Cafés einen Kaffee, bezahlt man nicht nur diesen, sondern einen zusätzlichen im voraus für jemanden, der sich selbst keinen leisten kann. Dieser „aufgeschobene Kaffee“ verbleibt im Café und eine Person, die weniger Geld zur Verfügung hat – egal aus welchem Grund – kann sich diesen dann kostenfrei abholen und genießen.\\
-Internet: \href{http://www.aufgeschobener-kaffee-siegen.de}{http://www.aufgeschobener-kaffee-siegen.de}\\
-Folgende machen mit:\\
-\begin{itemize}
-	\item Eiscafè Anna, Am Bahnhof 4, Siegen  
-	\item Rosso Arancio, Eiscafe in der Citygalerie, Siegen
-	\item Cafè Bienenstich, Am Bahnhof 4 - 12, Siegen
-	\item Ciao, Pizza In-Biss, Alte Poststraße 19, Siegen
-	\item Cafè Flocke, Marburger Straße 45. Siegen  
-	\item Fünf 10, das Herz im TZ, ein Projekt der AWO, Birlenbacher Straße 18 Geisweid
-	\item Cafè Planlos, Kohlbettstraße 18, Siegen  
-	\item Pizzeria Uno, Fürst-Johann-Moritz-Straße 6, Siegen 
-	\item Salz \& Pfeffer, Imbiss, Hessische Straße 8, Siegen
-	\item Seelbacher Haarschmiede, Freudenberger Str. 476, Siegen Seelbach 
-\end{itemize}
-
-\section{ZFK - Zentrum für Friedenskultur}
-ZFK - Zentrum für Friedenskultur. Günstiger Bistrobetrieb.\\
-\\
-Café Blau - Dunkel Café - Café Fair \\
-Kölner Str. 11 \\
-57072 Siegen \\
-Telefon: 02 71 - 23 82 52 1\\
-Mobil: 01 71 - 89 93 63 7\\ 
-Fax: 02 71 - 23 82 47 4\\  
-Email: \href{mailto:nolzpopp@web.de}{nolzpopp@web.de} \\ 
-Internet: \href{http://friedenskultur.com}{http://friedenskultur.com}\\
-
-\section{IB Cafe Net(t)werk}
-Öffnungszeiten : Montag bis Freitag 8 bis 16:00 Uhr\\
-Samstag 8 bis 13:30 Uhr \\
-Frühstück bis 11 Uhr: kleines Frühstück 2,00~\euro, großes Frühstück 3,50 \euro \\
-Mittagessen ab 11 Uhr: 3,00~\euro~ solange der Vorrat reicht \\
-\\
-Achenbacher Str. 115 \\
-57072 Siegen
-
-\section{Straßencafé im House Of Hope}
-Straßencafé: Donnerstags von 18.00 - 21.00 Uhr. Neben Anbetung und einer kurzen Andacht gibt es für kostenlos ein reichhaltiges warmes Essen. Bibelstunde: Dienstags von 18:00 - 19:00 Uhr.\\
-Internet: \href{http://wp1157692.server-he.de/?page_id=87}{http://wp1157692.server-he.de/?page\_id=87} 
-Straßencafé im House Of Hope\\
-Hagener Str. 78\\
-57072 Siegen\\
-Telefon: 02 73 5 - 65 67 11 
-Fax: 02 73 5 - 65 67 25
-
-\section{Alternteaave Die Christliche Teestube}
-Kaffe und Teestube. Dienstags ab 17:30 Uhr. Einen Gedanken. Essen (kostenlos). Gespräch, wenn gewünscht. Spiele, wenn gewünscht.\\
-\\
-Christliche Gemeinde Siegen Sandstrasse e.~V.\\
-Sandstrasse 32\\
-57072 Siegen
-
-\section{Caritas}
-Mittagstisch für 1 \euro  "Guten Appetit". Wir bieten Ihnen Drei mal wöchentlich einen Mittagstisch \enquote{Guten Appetit}. Eine Kooperation zwischen Caritasverband Siegen-Wittgenstein e.V., Katholisches Jugendwerk Förderband e.V. und der Kath. Kirchengemeinde St. Marien\\  
-\\
-Öffnungszeiten:\\
-Montag 11.30 - 13.00 Uhr \\
-Mittwoch 11.30 - 13.00 Uhr \\
-Freitag 11.30 - 13.00 Uhr \\
-\\
-So finden Sie uns 
-Martina Becher\\
-Caritasverband Siegen-Wittgenstein e.~V.\\ 
-Häutebachweg 5\\
-57072 Siegen \\
-Telefon: 02 71 - 23 60 2 - 11 
-
-\section{Nebenan, Ambulantes Zentrum und Café }
-Für jeden: Donnerstags 8 - 10 Uhr Frühstück, gr. Frühstück 2,00 \euro kl. Frühstück 1,00 \euro, Becher Kaffee  0,50 \euro \\
-\\
-Frankfurter Straße 18\\
-57074 Siegen
-
-\section{Öffentliches Restaurant im Gericht }
-Täglich wechselnde  Menüs ab 3,50 \euro. Tipp: Sehr lecker das Essen!
-
-\section{Öffentliches Restaurant Finanzamt Siegen}
-Restaurant Kantine Finanzamt Siegen. Frühstückszeit: 8:00 - 10:00 Uhr.  Mittagszeit: 11:45 - 13:30 Uhr. Speiseplan und Preise im Internet. Internet: \href{http://www.restaurant-finanzamt-siegen.de}{www.restaurant-finanzamt-siegen.de}
-
-\section{Freie evangelische Gemeinde Siegen-Geisweid > FeG}
-An Heiligabend ab 19:00 Uhr gibt es wieder das große Gratis-Weihnachtsbuffet in der FeG Siegen-Geisweid. Jeder ist herzlich eingeladen!
-
-\section{Kreuztaler Mittagstisch}
-Im April 2008 hat der Kreuztaler Mittagstisch seine Arbeit aufgenommen. Das Anliegen des Mittagstisches ist es, die bedürftigen Menschen in unserer Region mit einer frisch zubereiteten Mittagsmahlzeit in einer angenehmen Atmosphäre zu versorgen. 40 ehrenamtliche Frauen und Männer sorgen für einen reibungslosen Ablauf. Kostenbeitrag: 1,50 \euro. Öffnungszeiten sind: 11:30 - 13:00 Uhr, immer dienstags und freitags (auch in den Ferien) in der Kreuzkirche (Kreuztal Mitte)  \\
-\\
-Stiftung Diakoniestation Kreuztal\\
-Telefon: 02 73 2 - 10 26 
-
-\section{Neunkirchener Tafel e.~V.}
-Ausgabezeiten \& Café: die Tafel freitags geöffnet! Büro und Tafelladen in den Räumen der Christlichen Gemeinde Neunkirchen.
-Elke Rink\\
-Kölner Straße 241 \\
-57290 Neunkirchen \\
-Telefon 02 73 5 - 23 25 \\ 
-E-Mail: \href{mailto:info@neunkirchener-tafel.de}{info@neunkirchener-tafel.de}\\
-Internet: \href{www.neunkirchener-tafel.de}{www.neunkirchener-tafel.de}
-
-\section{foodsharing}
-foodsharing - Lebensmittel teilen statt wegwerfen. Nur im Internet: \href{http://foodsharing.de/  }{http://foodsharing.de/  }
+\input{kapitel/nahrung/siegener_tafel_e_v.tex}
+\input{kapitel/nahrung/brot_dosen_lebensmittelausgabe.tex}
+\input{kapitel/nahrung/evangelisch-freikirchlichen Gemeinden.tex}
+\input{kapitel/nahrung/aufge_sc_hobener_kaffee.tex}
+\input{kapitel/nahrung/zfk_zentrum_fuer_friedenskultur.tex}
+\input{kapitel/nahrung/ib_cafe_net_t_werk.tex}
+\input{kapitel/nahrung/stra_encaf__im_house_of_hope.tex}
+\input{kapitel/nahrung/alternteave_die_christliche_teestube.tex}
+\input{kapitel/nahrung/caritas.tex}
+\input{kapitel/nahrung/nebenan_ambulantes_zentrum_und_cafe.tex}
+\input{kapitel/nahrung/oeffentliches_restaurant_im_gericht.tex}
+\input{kapitel/nahrung/oeffentliches_restaurant_finanzant_siegen.tex}
+\input{kapitel/nahrung/freie_evangelische_gemeinde_siegen_geisweid_feg.tex}
+\input{kapitel/nahrung/kreuztaler_mittagstisch.tex}
+\input{kapitel/nahrung/neunkirchner_tafe_e_v.tex}
+\input{kapitel/nahrung/foodsharing.tex}
