--- a/kapitel/reparatur.tex
+++ b/kapitel/reparatur.tex
@@ -1,37 +1,5 @@
 \chapter{Reparaturen} \index{Reparaturen}
 
-\section{Das Heinzelwerk Siegen}
-Ehrenamtliche Nachbarschaftshilfe in einer Stadt. Gegenseitige Hilfe bei einfachen Alltagsarbeiten. Wir meinen der Bedarf ist vorhanden und zahlreiche Menschen (Ältere, Behinderte, Bedürftige) sind auf unkonventionelle, ehrenamtliche Hilfe angewiesen.  
-Ein Stuhl ist aus dem Leim gegangen, die Dichtung im Wasserhahn marode oder die Glühbirne durchgebrannt. Das Regal wackelt, die 
-Türe klemmt oder das Bild muss an die Wand.  Einfache Alltagsarbeiten, die viele im Nu erledigt haben, stellen oft ältere und behinderte Menschen vor große Probleme. Für viele, die in wirtschaftliche Not geraten sind, spielt auch Geld eine große Rolle, so dass sie selbst solche einfachen Arbeiten nicht bezahlen können.  Auf der anderen Seite gibt es in einer Stadt wie Siegen auch ein 
-Potential an geschickten, handwerklich begabten Menschen, die anderen unkonventionell und ehrenamtlich helfen wollen. 
-Das Heinzelwerk Siegen führt beide Gruppen zusammen.\\
-\\
-Stadt Siegen\\
-Leben im Alter\\
-Weidenauer Str. 215\\
-57076 Siegen \\
-Telefon: 02 71 - 40 4 - 22 00 \\
-Internet: \href{http://www.heinzelwerk-si.de}{www.heinzelwerk-si.de} \\
-E-Mail: \href{mailto:info@heinzelwerk-si.de}{info@heinzelwerk-si.de} 
- 
-\section{Fahrradreparaturen}
-Fahrradreparaturen aller Art in Siegen - Weidenau mit Hol und Bring Service (bis 10 km) oder Sie bringen uns das Rad vorbei. Für den Hol und Bring Service werden pauschal 15 \euro berechnet. Rufen Sie uns an, wir reparieren ihr Rad zu einem guten Preis. Wir reparieren auch alte, Baumarkt, und Internetfahrräder. \\
-\\
-Peter Judt \\
-Ernstweg 23 \\
-57076 Siegen \\
-Telefon: 02 71 - 35 27 70 \\ 
-Internet: \href{www.Bikeshop-Siegen.de}{www.Bikeshop-Siegen.de}\\
-E-Mail: \href{mailto:Bikeshop-Siegen@web.de}{Bikeshop-Siegen@web.de}
-
-\section{KREUZTALER Heinzelwerker und Taschengeldbörse}
-KREUZTALER Heinzelwerker und Taschengeldbörse, Haushaltsnahe Dienstleistungen. Verschiedenste Hilfestellungen im Alltag gibt es ab 1. April 2014 durch die Projekte \enquote{KREUZTALER Heinzelwerker und Taschengeldbörse}, welche durch das Stadtteilbüro/Mehrgenerationenhaus Fritz-Erler-Siedlung koordiniert werden.\\
-\\
-Danziger Straße 2, Erdgeschoss\\
-57223 Kreuztal \\
-Telefon: 02 73 2 - 37 90\\
-Telefon2: 02 73 2 - 27 60 2 \\
-E-Mail: \href{mailto:info@stadtteilbuero-fes-kreuztal.de }{info@stadtteilbuero-fes-kreuztal.de }\\
-Internet: \href{http://www.stadtteilbuero-fes-kreuztal.de/dienstleistungen.php }{http://www.stadtteilbuero-fes-kreuztal.de/dienstleistungen.php }
- 
+\input{kapitel/reparaturen/das_heinzelwerk_siegen.tex}
+\input{kapitel/reparaturen/fahrradreparaturen.tex}
+\input{kapitel/reparaturen/kreutzaler_heinzelwerker_und_taschengeldb_rse.tex}
