--- a/kapitel/tiere.tex
+++ b/kapitel/tiere.tex
@@ -1,10 +1,3 @@
 \chapter{Tiere}
 
-\section{Siegerländer Haustier-Hilfe e.~V.}
-Unsere Ziele? In soziale Not geratene Menschen und deren Tiere zu unterstützen mit kostenloser Futter- und Sachspendenabgabe, Aufklärung und Hilfe bei artgerechter Haltung von Haustieren, tierärztlicher Versorgung und persönlicher Beratung. Verschiedene Aktionen und Ausgabe Termine im Internet.\\
-
-Porschestr. 4\\
-57072 Siegen\\  
-Telefon: 02732 7620188 \\ 
-Internet: \href{www.siegerländerhaustierhilfe.de}{www.siegerländerhaustierhilfe.de}
-   
+\input{kapitel/tiere/siegerl_nder_haustier_hilfe_e_v.tex}
