put a demo version in demo

--- a/kapitel/nahrung.tex
+++ b/kapitel/nahrung.tex
@@ -2,7 +2,7 @@
 
 \input{kapitel/nahrung/siegener_tafel_e_v.tex}
 \input{kapitel/nahrung/brot_dosen_lebensmittelausgabe.tex}
-\input{kapitel/nahrung/evangelisch-freikirchlichen Gemeinden.tex}
+\input{kapitel/nahrung/evangelisch_freikirchlichen_Gemeinden.tex}
 \input{kapitel/nahrung/aufge_sc_hobener_kaffee.tex}
 \input{kapitel/nahrung/zfk_zentrum_fuer_friedenskultur.tex}
 \input{kapitel/nahrung/ib_cafe_net_t_werk.tex}
