fundus und suchthilfe hinzugefügt

--- a/kapitel/anzeigenmarkt.tex
+++ b/kapitel/anzeigenmarkt.tex
@@ -4,4 +4,4 @@
 \input{kapitel/anzeigenmarkt/siegerl_nder_tauschring.tex}
 \input{kapitel/anzeigenmarkt/regalfloh.tex}
 \input{kapitel/anzeigenmarkt/geisweider_flohm_rkte.tex}
- 
+\input{kapitel/anzeigenmarkt/fundus.tex} 
