--- a/kapitel/beratung.tex
+++ b/kapitel/beratung.tex
@@ -5,3 +5,4 @@
 \input{kapitel/beratung/diakonie_sozialdienst.tex}
 \input{kapitel/beratung/kinderschutzbund.tex}
 \input{kapitel/beratung/burgerservice_br_ckenbauer.tex}
+\input{kapitel/beratung/awo_suchthilfe.tex}
