Stricken, Reparatur von Kaffeautomaten, Drucker

--- a/kapitel/beratung.tex
+++ b/kapitel/beratung.tex
@@ -6,3 +6,5 @@
 \input{kapitel/beratung/kinderschutzbund.tex}
 \input{kapitel/beratung/burgerservice_br_ckenbauer.tex}
 \input{kapitel/beratung/awo_suchthilfe.tex}
+\input{kapitel/beratung/handarbeiten_bueschges.tex}
+
