--- a/kapitel/reparatur.tex
+++ b/kapitel/reparatur.tex
@@ -3,3 +3,5 @@
 \input{kapitel/reparaturen/das_heinzelwerk_siegen.tex}
 \input{kapitel/reparaturen/fahrradreparaturen.tex}
 \input{kapitel/reparaturen/kreutzaler_heinzelwerker_und_taschengeldb_rse.tex}
+\input{kapitel/reparaturen/KST-Elektronik.tex}
+\input{kapitel/reparaturen/cartridge_world_siegen.tex}
